syntax = "proto3";
package media;
import "base.proto"; 

service MediaService {
    rpc GetManyMedia( GetManyMediaRequest) returns (GetManyMediaResponse){}
    rpc listSlider(ListSliderRequest) returns (ListSliderResponse){}
    rpc getSlider(GetSliderRequest) returns (SliderResponse) {}
    rpc createSlider(CreateSliderRequest) returns (SliderResponse) {}
    rpc updateSlider(UpdateSliderRequest) returns (base.BooleanPayload) {}
    rpc deleteSlider(DeleteSliderRequest) returns (base.BooleanPayload) {}

}
message Media {
    string userId =1;
    string name  =2;
    string fileName =3;
    string mimeType =4;
    int32 size =5;
    int32 duration =6;
    string url =7;
    MediaStatus status =8;
    string _id = 9;
}

enum MediaStatus {
    UPLOADING =0;
    UPLOADED =1;
}

message GetManyMediaRequest{
    repeated string ids= 1;
}

message GetManyMediaResponse{
    repeated Media media =1;
}

enum SliderType{
  VIDEO = 0;
  IMAGE = 1;
}

message SliderResponse{
    string _id = 1;
    string mediaId = 2;
    int32 position = 3;
    SliderType type = 4;
    string redirectUrl = 5;
}
message FilterList{
    SliderType type_eq = 3;
}

message ListSliderRequest {
    FilterList filter = 1;
    base.PaginationInput pagination = 2;
}
message GetSliderRequest{
    string sliderId = 1;
}
message CreateSliderRequest{
    string mediaId = 1;
    int32 position = 2;
    SliderType type = 3;
    string  redirectUrl = 4;
}

message UpdateSliderRequest{
    string mediaId = 1;
    int32 position = 2;
    SliderType type = 3;
    string  redirectUrl = 4;
    string sliderId = 5;

}

message DeleteSliderRequest{
    string sliderId = 1;

}
message ListSliderResponse{
    repeated SliderResponse sliders = 1;
    base.PaginationResponse pagination = 2;
    int32 totalItem =3;
}